# fifacodes

./: .gitignore  LICENSE  README.md  pyproject.toml  scrape.py
.github/workflows/: publish.yml  test-suite.yml
fifacodes/: __init__.py  custom.csv  default.csv
tests/: test_fifacodes.py  test_scrape.py  wikipedia_fifacodes.html
